# soniox-compare

./: .containerignore  .env.example  .gitignore  Containerfile  README.md  config.py  main.py  pyproject.toml  utils.py
frontend/: README.md  eslint.config.js  index.html  package.json  vite.config.ts
frontend/public/: audio-processor.js
frontend/src/: app.tsx  index.css  main.tsx
frontend/src/components/: audio-wave-button.tsx  feature-comparison-table.tsx  main-layout.tsx  panel.tsx  provider-grid.tsx  transcript-renderer.tsx  websocket-recorder.tsx
frontend/src/components/sidebar/: action-panel.tsx  audio-picker.tsx  control-panel.tsx  translation-settings.tsx
frontend/src/components/ui/: autoscroll.tsx  search-select.tsx  select.tsx  sheet.tsx  slider.tsx  (+2 more)
frontend/src/contexts/: comparison-context.tsx  model-data-context.tsx
frontend/src/hooks/: use-url-settings.ts
frontend/src/lib/: comparison-constants.ts  fallback-model-data.ts  mock-transcript-data.ts  mock-websocket.ts  provider-features.ts  translation-utils.ts  utils.ts
providers/: base_provider.py  config.py
providers/assembly/: provider.py
providers/azure/: provider.py
providers/deepgram/: provider.py
providers/google/: provider.py
providers/openai/: provider.py
providers/soniox/: provider.py
providers/speechmatics/: provider.py
resources/: linkerd-await-v0.2.9-amd64
templates/: index.html
transcription_languages/: azure.json  deepgram.json  google.json  speechmatics.json
translation_languages/: azure.json  google.json  soniox_languages.json  speechmatics.json
